--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Gost",
-  "description": "Deploy Gost to Heroku.",
-  "keywords": ["Gost"],
+  "name": "Go",
+  "description": "Deploy Gost .",
+  "keywords": ["Go"],
   "env": {
     "METHOD": {
        "description": "Encryption method, null by default(table), the following methods are supported: aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
@@ -9,10 +9,10 @@
      },
      "PASSWORD": {
        "description": "A password used to encrypt transfer.",
-       "value": "ss123456"
+       "value": "s12345"
      }
   },
   "stack": "container",
-  "website": "https://github.com/xiaokaixuan/gost-heroku",
-  "repository": "https://github.com/xiaokaixuan/gost-heroku"
+  "website": "https://github.com/QAWSDUI3/wwwsz",
+  "repository": "https://github.com/QAWSDUI3/wwwsz"
  }
